samples/reference/valid/R3.dita
<?xml version="1.0" encoding="UTF-8"?>
<reference id="ref_r3_valid">
  <title>Correct Title</title>
  <shortdesc>Correctly placed shortdesc.</shortdesc>
  <prolog><author>Test</author></prolog>
  <refbody>
    <p><title> is followed by <shortdesc> (R3 satisfied).</p>
  </refbody>
</reference>